--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--/DNS Prefetch-->
 
 </head>
-<body>
+<body data-page="default/index.html" data-pagedir="assets/html/pages/">
     <!--Loading页-->
     <div id="ui_loading" class="ui_loading">
         <div class="ui_loading_bd"><img class="ui_loading_img" src="http://static.gtimg.com/icson/img/common/load.gif" alt="Loading"/></div>
@@ -27,59 +27,7 @@
 
     <!--App框架-->
     <div class="ui_app">
-        <div class="ui_app_bd">
-            
-            <!--页面框架-->
-            <div class="ui_page">
-                <div id="J_header" class="ui_hd">
-                        
-                    <!--首页头部-->
-                    <div id="J_hd1" class="ui_title">
-                        <h1>易迅商城微信概念版</h1>
-                    </div>
-
-                    <!--搜索页头部-->
-                    <div id="J_hd2" class="ui_title">
-                        <div class="mod_search_form">
-                            <input type="input" />
-                            <button type="button" data-back="view1" class="bg1 b_back1">取消</button>
-                        </div>
-                    </div>
-
-                    <!--一级浏览页头部-->
-                    <div id="J_hd3" class="ui_title">
-                        <h1>产品浏览</h1>
-                        <a href="#view1" data-back="view1" class="b_back"></a>
-                    </div>
-
-                    <!--二级浏览页头部-->
-                    <div id="J_hd4" class="ui_title">
-                        <h1>数码家电</h1>
-                        <a href="#view3" data-back="view3"class="b_back"></a>
-                    </div>
-
-                    <!--列表页头部-->
-                    <div id="J_hd5" class="ui_title">
-                        <h1>产品列表</h1>
-                        <a href="#view4" data-back="view4"class="b_back"></a>
-                    </div>
-
-                    <!--详情页头部-->
-                    <div id="J_hd6" class="ui_title">
-                        <h1>产品详情</h1>
-                        <a href="#view5" data-back="view5" class="b_back"></a>
-                    </div>
-
-                </div>
-                <!--/ui_hd-->
-                <div id="J_main" class="ui_bd">
-
-                </div>
-                <!--/ui_bd-->
-            </div>
-            <!--页面框架-->
-
-        </div>
+        <div class="ui_app_bd"></div>
     </div>
     <!--/WebApp框架-->
 
