--- a/assets/html/pages/home/index.html
+++ b/assets/html/pages/home/index.html
@@ -1,5 +1,5 @@
 <!--页面框架-->
-<article class="ui_page">
+<article id="Home" class="ui_page">
     <header class="ui_hd">
             
         <!--首页头部-->
