--- a/assets/html/pages/home/page3.html
+++ b/assets/html/pages/home/page3.html
@@ -1,38 +1,38 @@
 <!--页面框架:二级浏览页-->
-<article class="ui_page">
+<article id="oxview-home-page3" class="ui_page">
     <header class="ui_hd">
         <!--头部-->
         <div class="ui_title">
             <h1>数码家电</h1>
-            <a href="#view3" data-back="view3"class="b_back"></a>
+            <a href="#page/home/page2" data-back="page/home/page2" class="b_back"></a>
         </div>
 
     </header>
     <!--/ui_hd-->
     <div class="ui_bd">
-        <section class="ui_section">
+        <section class="ui_section current">
             <div class="mod_list">
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>摄影摄像</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>数码存储</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>家用电器</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>摄影配件</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>音频设备</h3>
                     </div>
@@ -42,7 +42,7 @@
                         <h3>网络设备</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>配件服务</h3>
                     </div>
