--- a/assets/html/pages/home/index.html
+++ b/assets/html/pages/home/index.html
@@ -1,5 +1,5 @@
 <!--页面框架-->
-<article id="Home" class="ui_page">
+<article id="oxview-home-index" class="ui_page">
     <header class="ui_hd">
             
         <!--首页头部-->
@@ -10,7 +10,7 @@
     </header>
     <!--/ui_hd-->
     <div class="ui_bd">
-        <section class="ui_section">
+        <section class="ui_section current">
             <div id="J_bd1_scroll" class="mod_carousel sy_carousel">
                 <div class="mod_carousel_photo">
                     <a class="mod_carousel_slide" href="javascript:;"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></a>
@@ -36,10 +36,10 @@
             </div>
 
             <div class="sy_nav">
-                <a href="#view2">
+                <a href="#page/home/page1">
                     <i class="ico_search"></i>
                     <strong>搜索</strong>
-                <a href="#view3">
+                <a href="#page/home/page2">
                     <i class="ico_browser"></i>
                     <strong>浏览</strong>
                 <a>
