--- a/assets/html/pages/home/page2.html
+++ b/assets/html/pages/home/page2.html
@@ -1,31 +1,31 @@
 <!--页面框架:一级浏览页-->
-<article class="ui_page">
+<article id="oxview-home-page2" class="ui_page">
     <header class="ui_hd">
         <!--一级浏览页头部-->
         <div class="ui_title">
             <h1>产品浏览</h1>
-            <a href="#view1" data-back="view1" class="b_back"></a>
+            <a href="#page/home" data-back="page/home" class="b_back"></a>
         </div>
     </header>
     <!--/ui_hd-->
     <div class="ui_bd">
-        <section class="ui_section">
+        <section class="ui_section current">
             <div class="mod_list mod_photo sb_list">
-                <a href="#view4" class="mod_list_item">
+                <a href="#page/home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>充值服务</h3>
                         <p>话费/Q币/网游/彩票/电影票</p>
                     </div>
                 </a>
-                <a href="#view4" class="mod_list_item">
+                <a href="#page/home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>手机/笔记本</h3>
                         <p>手机/平板/电脑/硬件</p>
                     </div>
                 </a>
-                <a href="#view4" class="mod_list_item">
+                <a href="#page/home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
                     <div class="mod_list_info">
                         <h3>数码家电</h3>
