--- a/assets/html/pages/home/page5.html
+++ b/assets/html/pages/home/page5.html
@@ -1,17 +1,17 @@
 <!--页面框架：详情页头部-->
-<article class="ui_page">
+<article id="oxview-home-page5" class="ui_page">
     <header class="ui_hd">
 
         <!--详情页头部-->
         <div class="ui_title">
             <h1>产品详情</h1>
-            <a href="#view5" data-back="view5" class="b_back"></a>
+            <a href="#page/home/page4" data-back="page/home/page4" class="b_back"></a>
         </div>
 
     </header>
     <!--/ui_hd-->
     <div class="ui_bd">
-        <section class="ui_section">
+        <section class="ui_section current">
             <div id="J_bd6_scroll" class="mod_carousel sd_carousel">
                 <div class="mod_carousel_photo">
                     <a class="mod_carousel_slide" href="javascript:;"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></a>
