--- a/demo/html/pages/home/index.html
+++ b/demo/html/pages/home/index.html
@@ -4,7 +4,7 @@
             
         <!--首页头部-->
         <div class="ui_title">
-            <h1>易迅商城微信概念版</h1>
+            <h1>xo.js demo</h1>
         </div>
 
     </header>
