--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>xo.js</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/touch.css" />
-    <link rel="stylesheet" href="assets/css/animations.css" />
+    <link rel="stylesheet" href="demo/css/style.css" />
 
     <!--DNS Prefetch-->
     <!--<link rel="dns-prefetch" href=""/>-->
     <!--/DNS Prefetch-->
 
 </head>
-<body>
+<body data-viewdir="demo/html/pages/">
 
     <!--App框架-->
     <div class="ui_app">
@@ -33,34 +31,34 @@
 
     <!--<script src="http://weinre.qq.com/target/target-script-min.js#levinhuang"></script>-->
     <!--3party libs-->
-    <script src="assets/js/libs/fastclick.js"></script>
-    <script src="assets/js/libs/iscroll.js"></script>
-    <script src="assets/js/libs/zepto.min.js"></script>
-    <script src="assets/js/libs/underscore-min.js"></script>
-    <script src="assets/js/libs/backbone-min.js"></script>
-    <script src="assets/js/libs/hogan-2.0.0.js"></script>
+    <script src="src/js/libs/fastclick.js"></script>
+    <script src="src/js/libs/iscroll.js"></script>
+    <script src="src/js/libs/zepto.min.js"></script>
+    <script src="src/js/libs/underscore-min.js"></script>
+    <script src="src/js/libs/backbone-min.js"></script>
+    <script src="src/js/libs/hogan-2.0.0.js"></script>
 
     <!--XO framework-->
-    <script src="assets/js/xo.js"></script>
-    <script src="assets/js/modules/xo.constants.js"></script>
-    <script src="assets/js/modules/xo.media.js"></script>
-    <script src="assets/js/modules/xo.support.js"></script>
-    <script src="assets/js/modules/xo.event.js"></script>
-    <script src="assets/js/modules/xo.controller.js"></script>
-    <script src="assets/js/modules/xo.view.js"></script>
-    <script src="assets/js/modules/xo.view.mask.js"></script>
-    <script src="assets/js/modules/xo.router.js"></script>
-    <script src="assets/js/modules/xo.animate.js"></script>
-    <script src="assets/js/modules/xo.app.js"></script>
+    <script src="src/js/xo.js"></script>
+    <script src="src/js/modules/xo.constants.js"></script>
+    <script src="src/js/modules/xo.media.js"></script>
+    <script src="src/js/modules/xo.support.js"></script>
+    <script src="src/js/modules/xo.event.js"></script>
+    <script src="src/js/modules/xo.controller.js"></script>
+    <script src="src/js/modules/xo.view.js"></script>
+    <script src="src/js/modules/xo.view.mask.js"></script>
+    <script src="src/js/modules/xo.router.js"></script>
+    <script src="src/js/modules/xo.animate.js"></script>
+    <script src="src/js/modules/xo.app.js"></script>
     
     <!--app biz code-->
-    <script src="assets/js/controllers/home.js"></script>
-    <script src="assets/js/views/home/index.js"></script>
-    <script src="assets/js/views/home/page1.js"></script>
-    <script src="assets/js/views/home/page2.js"></script>
-    <script src="assets/js/views/home/page3.js"></script>
-    <script src="assets/js/views/home/page4.js"></script>
-    <script src="assets/js/views/home/page5.js"></script>
+    <script src="demo/js/controllers/home.js"></script>
+    <script src="demo/js/views/home/index.js"></script>
+    <script src="demo/js/views/home/page1.js"></script>
+    <script src="demo/js/views/home/page2.js"></script>
+    <script src="demo/js/views/home/page3.js"></script>
+    <script src="demo/js/views/home/page4.js"></script>
+    <script src="demo/js/views/home/page5.js"></script>
 
     <script>
         $(document).ready(function(){
