--- a/demo/html/pages/home/index.html
+++ b/demo/html/pages/home/index.html
@@ -3,9 +3,20 @@
     <header class="ui_hd">
             
         <!--首页头部-->
-        <div class="ui_title">
+        <nav data-plugin="menu" data-plugin-id="diyige" class="mod_nav mod_nav_fixed">
+            <div class="mod_nav_outer">
+                <div class="mod_nav_inner">
+                    <a data-action='homepage.turnPage' data-page="1" href="#">一日一品</a>
+                    <a data-action='homepage.turnPage' data-page="2" href="#">精选商品</a>
+                    <a data-action='homepage.turnPage' data-page="3" href="#" class="on">品牌特卖</a>
+                    <a data-action='homepage.turnPage' data-page="4" href="#">妈咪宝贝</a>
+                    <a data-action='homepage.turnPage' data-page="5" href="#">逛逛</a>
+                </div>
+            </div>
+        </nav>
+        <!--div data-plugin="title" class="ui_title">
             <h1>xo.js demo</h1>
-        </div>
+        </div-->
 
     </header>
     <!--/ui_hd-->
