--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>xo.js</title>
     <link rel="stylesheet" href="demo/css/style.css" />
-
+    <link rel="stylesheet" href="demo/css/menu.css" />
     <!--DNS Prefetch-->
     <!--<link rel="dns-prefetch" href=""/>-->
     <!--/DNS Prefetch-->
@@ -44,6 +44,8 @@
     <script src="src/js/modules/xo.media.js"></script>
     <script src="src/js/modules/xo.support.js"></script>
     <script src="src/js/modules/xo.event.js"></script>
+    <script src="src/js/modules/xo.plugin.js"></script>
+    <script src="src/js/plugins/plugin_menu.js"></script>
     <script src="src/js/modules/xo.controller.js"></script>
     <script src="src/js/modules/xo.view.js"></script>
     <script src="src/js/modules/xo.view.mask.js"></script>
