--- a/demo/html/pages/home/index.html
+++ b/demo/html/pages/home/index.html
@@ -1,16 +1,16 @@
-<!--页面框架-->
-<article id="oxview-home-index" class="ui_page">
-    <header class="ui_hd">
-            
-        <!--首页头部-->
-        <div class="ui_title">
-            <h1>xo.js demo</h1>
-        </div>
+<!--XO Page Layout-->
+<article id="xoview-home-index" class="xo_page">
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#pages/home">xo.js demo</a>
+            </div>
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll">
 
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
+            <!--S 页面内容-->
             <div id="J_bd1_scroll" class="mod_carousel sy_carousel">
                 <div class="mod_carousel_photo">
                     <a class="mod_carousel_slide" href="javascript:;"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></a>
@@ -53,8 +53,9 @@
                     <strong>信息</strong>
                 </a>
             </div>
+            <!--E 页面内容-->
+
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
