update demo with ox.plugin.js

--- a/demo/html/pages/home/index.html
+++ b/demo/html/pages/home/index.html
@@ -8,7 +8,7 @@
             </div>
         </header>
         <!--E header-->
-        <section class="xo_section xo_scroll">
+        <section class="xo_section xo_scroll current">
 
             <!--S 页面内容-->
             <div id="J_bd1_scroll" class="mod_carousel sy_carousel">
