--- a/demo/html/pages/home/page1.html
+++ b/demo/html/pages/home/page1.html
@@ -1,17 +1,15 @@
 <!--搜索页-->
-<article id="oxview-home-page1" class="ui_page">
-    <header class="ui_hd">
-        <!--搜索页头部-->
-        <div class="ui_title">
+<article id="xoview-home-page1" class="ui_page">
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="mod_search_form">
                 <input type="input" />
                 <button type="button" data-back="page/home" class="bg1 b_back1">取消</button>
             </div>
-        </div>
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll current">
             <div class="mod_search_list">
                 <div class="mod_list mod_photo sh_list">
                     <a href="#page/home/page5" class="mod_list_item">
@@ -53,6 +51,5 @@
             </div>
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
