--- a/demo/html/pages/home/page4.html
+++ b/demo/html/pages/home/page4.html
@@ -1,17 +1,16 @@
 <!--页面框架：列表页头部-->
-<article id="oxview-home-page4" class="ui_page">
-    <header class="ui_hd">
+<article id="xoview-home-page4" class="ui_page">
 
-        <!--列表页头部-->
-        <div class="ui_title">
-            <h1>产品列表</h1>
-            <a href="#page/home/page3" data-back="page/home/page3" class="b_back"></a>
-        </div>
-
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#pages/home/page4">产品列表</a>
+            </div>
+            <a href="#page/home/page3" data-back="page/home/page3" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll current">
             <div class="mod_list mod_photo sh_list">
                 <a href="#page/home/page5" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
@@ -51,6 +50,5 @@
             </div>
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
