--- a/demo/html/pages/home/page5.html
+++ b/demo/html/pages/home/page5.html
@@ -1,17 +1,17 @@
 <!--页面框架：详情页头部-->
-<article id="oxview-home-page5" class="ui_page">
-    <header class="ui_hd">
+<article id="xoview-home-page5" class="ui_page">
 
-        <!--详情页头部-->
-        <div class="ui_title">
-            <h1>产品详情</h1>
-            <a href="#page/home/page4" data-back="page/home/page4" class="b_back"></a>
-        </div>
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#pages/home/page5">产品详情</a>
+            </div>
+            <a href="#page/home/page4" data-back="page/home/page4" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll current">
 
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
             <div id="J_bd6_scroll" class="mod_carousel sd_carousel">
                 <div class="mod_carousel_photo">
                     <a class="mod_carousel_slide" href="javascript:;"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></a>
@@ -81,8 +81,8 @@
                     </div>
                 </a>
             </div>
+
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
