--- a/demo/html/pages/mall/index.html
+++ b/demo/html/pages/mall/index.html
@@ -1,9 +1,9 @@
 <!--页面框架-->
-<article id="xoview-mall-index" class="xo_page">
+<article id="xoview-mall-index" class="xo_page page_mall_index">
     <div class="xo_page_inner">
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
-            <nav data-plugin="menu" data-plugin-id="diyige" class="mod_nav mod_nav_fixed">
+            <nav data-plugin="menu" data-plugin-id="diyige" class="mod_nav">
                 <div class="mod_nav_outer">
                     <div class="mod_nav_inner">
                         <a data-action='homepage.turnPage' data-page="1" href="#">一日一品</a>
@@ -14,10 +14,11 @@
                     </div>
                 </div>
             </nav>
+            <a href="#page/home" data-back="page/home" class="navbar-btn pull-left">&lt;&lt;返回</a>
         </header>
         <!--E header-->
 
-        <section class="xo_section xo_scroll">
+        <section class="xo_section xo_scroll current">
 
         <!--页面内容-->
 
