--- a/demo/html/pages/home/page2.html
+++ b/demo/html/pages/home/page2.html
@@ -1,15 +1,17 @@
 <!--页面框架:一级浏览页-->
-<article id="oxview-home-page2" class="ui_page">
-    <header class="ui_hd">
-        <!--一级浏览页头部-->
-        <div class="ui_title">
-            <h1>产品浏览</h1>
-            <a href="#page/home" data-back="page/home" class="b_back"></a>
-        </div>
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
+<article id="xoview-home-page2" class="ui_page">
+
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#pages/home/page2">产品浏览</a>
+            </div>
+            <a href="#page/home" data-back="page/home" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll current">
+
             <div class="mod_list mod_photo sb_list">
                 <a href="#page/home/page3" class="mod_list_item">
                     <div class="mod_list_photo"><img src="http://static.gtimg.com/img/opr/201206/19/stg/xiapu1.jpg" alt="图片名称" /></div>
@@ -33,8 +35,8 @@
                     </div>
                 </a>
             </div>
+
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
