--- a/demo/html/pages/home/page3.html
+++ b/demo/html/pages/home/page3.html
@@ -1,16 +1,15 @@
 <!--页面框架:二级浏览页-->
-<article id="oxview-home-page3" class="ui_page">
-    <header class="ui_hd">
-        <!--头部-->
-        <div class="ui_title">
-            <h1>数码家电</h1>
-            <a href="#page/home/page2" data-back="page/home/page2" class="b_back"></a>
-        </div>
-
-    </header>
-    <!--/ui_hd-->
-    <div class="ui_bd">
-        <section class="ui_section current">
+<article id="xoview-home-page3" class="ui_page">
+    <div class="xo_page_inner">
+        <!--S header-->
+        <header class="navbar navbar-default navbar-static-top" role="banner">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#page/home/page3">数码家电</a>
+            </div>
+            <a href="#page/home/page2" data-back="page/home/page2" class="navbar-btn pull-left"><span class="b_back"></span></a>
+        </header>
+        <!--E header-->
+        <section class="xo_section xo_scroll current">
             <div class="mod_list">
                 <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
@@ -37,7 +36,7 @@
                         <h3>音频设备</h3>
                     </div>
                 </a>
-                <a href="#view5" class="mod_list_item">
+                <a href="#page/home/page4" class="mod_list_item">
                     <div class="mod_list_info">
                         <h3>网络设备</h3>
                     </div>
@@ -50,6 +49,5 @@
             </div>
         </section>
     </div>
-    <!--/ui_bd-->
 </article>
 <!--页面框架-->
