--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
     <script src="demo/js/views/home/page4.js"></script>
     <script src="demo/js/views/home/page5.js"></script>
 
+    <script src="demo/js/controllers/mall.js"></script>
+    <script src="demo/js/views/mall/index.js"></script>
+
     <script>
         $(document).ready(function(){
 
