--- a/demo/html/pages/home/page1.html
+++ b/demo/html/pages/home/page1.html
@@ -1,5 +1,5 @@
 <!--搜索页-->
-<article id="xoview-home-page1" class="ui_page">
+<article id="xoview-home-page1" class="xo_page">
     <div class="xo_page_inner">
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
