--- a/demo/html/pages/home/page3.html
+++ b/demo/html/pages/home/page3.html
@@ -1,5 +1,5 @@
 <!--页面框架:二级浏览页-->
-<article id="xoview-home-page3" class="ui_page">
+<article id="xoview-home-page3" class="xo_page">
     <div class="xo_page_inner">
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
