--- a/demo/html/pages/home/page4.html
+++ b/demo/html/pages/home/page4.html
@@ -1,5 +1,5 @@
 <!--页面框架：列表页头部-->
-<article id="xoview-home-page4" class="ui_page">
+<article id="xoview-home-page4" class="xo_page">
 
     <div class="xo_page_inner">
         <!--S header-->
