--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>xo.js</title>
-    <link rel="stylesheet" href="src/css/xo.css" />
+    <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="demo/css/style.css" />
 	<link rel="stylesheet" href="demo/css/menu.css" />
 
