--- a/demo/html/pages/home/page2.html
+++ b/demo/html/pages/home/page2.html
@@ -1,5 +1,5 @@
 <!--页面框架:一级浏览页-->
-<article id="xoview-home-page2" class="ui_page">
+<article id="xoview-home-page2" class="xo_page">
 
     <div class="xo_page_inner">
         <!--S header-->
