--- a/demo/html/pages/home/page5.html
+++ b/demo/html/pages/home/page5.html
@@ -1,5 +1,5 @@
 <!--页面框架：详情页头部-->
-<article id="xoview-home-page5" class="ui_page">
+<article id="xoview-home-page5" class="xo_page">
 
     <div class="xo_page_inner">
         <!--S header-->
