--- a/demo/html/pages/mall/index.html
+++ b/demo/html/pages/mall/index.html
@@ -3,7 +3,7 @@
     <div class="xo_page_inner">
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
-            <nav data-plugin="menu" data-plugin-id="diyige" class="mod_nav">
+            <nav data-plugin="menu" data-plugin-id="menu-top" class="mod_nav">
                 <div class="mod_nav_outer">
                     <div class="mod_nav_inner">
                         <a data-action='homepage.turnPage' data-page="1" href="#">一日一品</a>
@@ -18,10 +18,60 @@
         </header>
         <!--E header-->
 
-        <section class="xo_section xo_scroll current">
+        <section class="xo_section xo_scroll current" data-plugin="loadmore" data-plugin-id="pager-1">
 
-        <!--页面内容-->
+            <div class="pager">
+                <div class="mod_more"><i></i><a href="#">向上拖动加载更多！</a></div>
+                <a href="#" class="mod_goods">
+                    <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                    <div class="mod_goods_info">
+                        <h4>ThinkPad yoga 12.5英寸超级本</h4>
+                        <p>金属机壳感妖艳的360度旋转屏幕</p>
+                        <p><del>市场价：&yen;2888</del></p>
+                        <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
+                    </div>
+                </a>
 
+                <a href="#" class="mod_goods">
+                    <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                    <div class="mod_goods_info">
+                        <h4>ThinkPad yoga 12.5英寸超级本</h4>
+                        <p>金属机壳感妖艳的360度旋转屏幕</p>
+                        <p><del>市场价：&yen;2888</del></p>
+                        <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
+                    </div>
+                </a>
+
+                <a href="#" class="mod_goods">
+                    <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                    <div class="mod_goods_info">
+                        <h4>ThinkPad yoga 12.5英寸超级本</h4>
+                        <p>金属机壳感妖艳的360度旋转屏幕</p>
+                        <p><del>市场价：&yen;2888</del></p>
+                        <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
+                    </div>
+                </a>
+
+                <a href="#" class="mod_goods">
+                    <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                    <div class="mod_goods_info">
+                        <h4>ThinkPad yoga 12.5英寸超级本</h4>
+                        <p>金属机壳感妖艳的360度旋转屏幕</p>
+                        <p><del>市场价：&yen;2888</del></p>
+                        <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
+                    </div>
+                </a>
+
+                <a href="#" class="mod_goods">
+                    <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
+                    <div class="mod_goods_info">
+                        <h4>ThinkPad yoga 12.5英寸超级本</h4>
+                        <p>金属机壳感妖艳的360度旋转屏幕</p>
+                        <p><del>市场价：&yen;2888</del></p>
+                        <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
+                    </div>
+                </a>
+            </div>
         </section>
 
     </div>
