--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="demo/css/style.css" />
 	<link rel="stylesheet" href="demo/css/menu.css" />
+    <link rel="stylesheet" href="demo/css/loadmore.css" />
 
 </head>
 <body data-viewdir="demo/html/pages/">
@@ -44,6 +45,7 @@
     <script src="src/js/modules/xo.event.js"></script>
     <script src="src/js/modules/xo.plugin.js"></script>
     <script src="src/js/plugins/plugin_menu.js"></script>
+    <script src="src/js/plugins/plugin_loadmore.js"></script>
     <script src="src/js/modules/xo.controller.js"></script>
     <script src="src/js/modules/xo.view.js"></script>
     <script src="src/js/modules/xo.view.mask.js"></script>
