XO.Controller and XO.View enhanced

--- a/demo/html/pages/home/index.html
+++ b/demo/html/pages/home/index.html
@@ -4,7 +4,7 @@
         <!--S header-->
         <header class="navbar navbar-default navbar-static-top" role="banner">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#pages/home">xo.js demo</a>
+                <a class="navbar-brand" href="#pages/home">XO WebApp Framework</a>
             </div>
         </header>
         <!--E header-->
@@ -48,9 +48,9 @@
                 <a>
                     <i class="ico_account"></i>
                     <strong>账户</strong>
-                <a>
+                <a href="#page/about">
                     <i class="ico_about"></i>
-                    <strong>信息</strong>
+                    <strong>关于XO</strong>
                 </a>
             </div>
             <!--E 页面内容-->
