add XO.View.switchTo method

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--E 遮罩-->
 
     <!--S loader-->
-    <div id="xoview-common-loader" class="xo_loader hide"><div class="xo_loader_animate"><span></span><span></span><span></span></div></div>
+    <div id="xoview-common-loader" class="xo_loader"><div class="xo_loader_animate"><span></span><span></span><span></span></div></div>
     <!--E loader-->
 
     <!--<script src="http://weinre.qq.com/target/target-script-min.js#levinhuang"></script>-->
