--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="demo/css/style.css" />
 	<link rel="stylesheet" href="demo/css/menu.css" />
     <link rel="stylesheet" href="demo/css/loadmore.css" />
+    <link rel="stylesheet" href="demo/css/swipeview.css" />
 
 </head>
 <body data-viewdir="demo/html/pages/">
@@ -46,6 +47,7 @@
     <script src="src/js/modules/xo.plugin.js"></script>
     <script src="src/js/plugins/plugin_menu.js"></script>
     <script src="src/js/plugins/plugin_loadmore.js"></script>
+    <script src="src/js/plugins/plugin_swipeview.js"></script>
     <script src="src/js/modules/xo.controller.js"></script>
     <script src="src/js/modules/xo.view.js"></script>
     <script src="src/js/modules/xo.view.mask.js"></script>
