--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="src/js/libs/fastclick.js"></script>
     <script src="src/js/libs/iscroll.js"></script>
     <script src="src/js/libs/zepto.min.js"></script>
+    <script src="src/js/libs/zepto.fx.js"></script>
     <script src="src/js/libs/underscore-min.js"></script>
     <script src="src/js/libs/backbone-min.js"></script>
     <script src="src/js/libs/hogan-2.0.0.js"></script>
