--- a/demo/html/pages/mall/index.html
+++ b/demo/html/pages/mall/index.html
@@ -19,58 +19,7 @@
         <!--E header-->
         <div class="card" id="card" data-max="2" data-min="-2" data-plugin="swipeview" data-plugin-id="swiper">
             <section class="xo_section xo_scroll view_1" data-plugin="loadmore" data-plugin-id="pager-1">
-                <div class="pager">
-                    <div class="mod_more"><i></i><a href="#">向上拖动加载更多！</a></div>
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-                </div>
+                <div class="pager"></div>
             </section>
             <section class="xo_section xo_scroll view_2" data-plugin="loadmore" data-plugin-id="pager-2">
                 <div class="pager">
@@ -127,58 +76,7 @@
                 </div>
             </section>
             <section class="xo_section xo_scroll view_3" data-plugin="loadmore" data-plugin-id="pager-3">
-                <div class="pager">
-                    <div class="mod_more"><i></i><a href="#">向上拖动加载更多！</a></div>
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="mod_goods">
-                        <div class="mod_goods_photo"><img src="demo/img/mall/item.jpg" alt="图片名称" /></div>
-                        <div class="mod_goods_info">
-                            <h4>ThinkPad yoga 12.5英寸超级本</h4>
-                            <p>金属机壳感妖艳的360度旋转屏幕</p>
-                            <p><del>市场价：&yen;2888</del></p>
-                            <p><strong>微信价：</strong><span class="mod_goods_price">&yen;2888</span></p>
-                        </div>
-                    </a>
-                </div>
+                <div class="pager"></div>
             </section>
         </div>
     </div>
