--- a/demo/yxmall/index.html
+++ b/demo/yxmall/index.html
@@ -12,7 +12,7 @@
     <title>易迅商城</title>
     <link rel="stylesheet" href="../../src/css/xo.css?v=20131209" />
     <link rel="stylesheet" href="css/gb.css" />
-	<link rel="stylesheet" href="css/act_demo.css" />
+	<link rel="stylesheet" href="css/act_demo.css?v=20131212" />
     <link rel="stylesheet" href="css/daily.css" />
 
 </head>
